# dst_lua_lab

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  dstlab.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
casepacks/example_case/: README.md  adapter.py  case.toml
casepacks/frontend_mod_debug/: README.md  case.toml
casepacks/general_mod_debug/: README.md  case.toml
casepacks/server_sim_debug/: README.md  case.toml
docs/: development-guide.md
modules/controlled_replay/: README.md  module.toml  plugin.py
modules/dst_runtime_baseline/: README.md  module.toml  plugin.py
modules/example_trace/: README.md  module.toml  plugin.py
modules/persistence_trace/: README.md  module.toml  plugin.py
modules/rpc_capture/: README.md  module.toml  plugin.py
modules/scheduler_trace/: README.md  module.toml  plugin.py
modules/strict_env/: README.md  module.toml  plugin.py
src/dst_lua_lab/: __init__.py  cli.py  config.py  doctor.py  extension_runtime.py  manifest.py  patches.py  planner.py  registry.py  runtime.py  scaffold.py  settings.py  state.py  trace.py  worker.py
tests/: conftest.py
tests/integration/: test_controlled_replay_integration.py  test_debug_mod_cli.py  test_extension_cli.py  test_extension_examples.py  test_extension_worker_runtime.py  test_modload.py  test_modload_fixture_corpus.py  test_new_cli_workflows.py  test_worker.py  test_workspace_assets.py
tests/packaging/: test_wheel_install.py
tests/unit/: test_controlled_replay.py  test_doctor.py  test_extension_registry_core.py  test_extension_runtime.py  test_patch_schema.py  test_runtime.py  test_scaffold.py  test_vfs.py  (+2 more)
tools/: scan_sensitive.py
(+54 files in other folders)
