[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dst-lua-lab"
version = "0.1.0"
description = "Auditable offline Lua laboratory for Don't Starve Together mods"
requires-python = ">=3.11"
dependencies = ["lupa>=2.8"]

[project.scripts]
dstlab = "dst_lua_lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
