[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "dst-lua-lab"
version = "0.1.0"
description = "Auditable offline Lua laboratory for Don't Starve Together mods"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "tianyue1917" }]
requires-python = ">=3.11"
dependencies = ["lupa>=2.8"]
keywords = ["dont-starve-together", "lua", "modding", "debugging"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8", "setuptools>=77", "wheel"]

[project.urls]
Repository = "https://github.com/tianyue1917/dst_lua_lab"
Documentation = "https://github.com/tianyue1917/dst_lua_lab/blob/main/docs/development-guide.md"

[project.scripts]
dstlab = "dst_lua_lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
